<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragment.FavoriteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/collection_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Spinner
                android:id="@+id/spinner_collection"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_add_collection"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/new_collection"
                android:text="+" />

            <Button
                android:id="@+id/button_manage_collection"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/manage" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/collection_controls"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/txt_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/no_item"
            android:textColor="@color/text_color"
            android:textSize="@dimen/item_semi_medium_text"
            android:visibility="gone" />

    </RelativeLayout>
</RelativeLayout>
