<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.StoriesActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/reading_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/banner_ads">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_img_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/surface_color"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            cardView:cardCornerRadius="@dimen/_8sdp"
            cardView:cardElevation="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_img_detail"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_centerVertical="true"
                        cardView:cardCornerRadius="@dimen/_6sdp"
                        cardView:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/img_topic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/topic_image"
                            android:src="@mipmap/ic_launcher" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/txt_story_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:layout_toEndOf="@+id/card_img_detail"
                        android:text="@string/app_name"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/item_semi_medium_text" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_story"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/story_placeholder"
                    android:textSize="@dimen/item_medium_text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/banner_ads"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:scaleType="center"
        android:contentDescription="@string/action_share"
        android:src="@drawable/ic_share"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="auto"
        app:rippleColor="@null" />

    <LinearLayout
        android:id="@+id/banner_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:orientation="vertical"></LinearLayout>
</RelativeLayout>
