<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/surface_color"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:divider="@android:color/transparent"
    android:dividerHeight="0.0px"
    cardView:cardCornerRadius="@dimen/_8sdp"
    cardView:cardElevation="@dimen/_2sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_img_topic"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerVertical="true"
            cardView:cardCornerRadius="@dimen/_6sdp"
            cardView:cardElevation="0dp">

            <ImageView
                android:id="@+id/img_topic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/topic_image"
                android:src="@mipmap/ic_launcher" />

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/card_img_topic">

            <TextView
                android:id="@+id/txt_topic_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/img_item_arrow"
                android:text="@string/title_activity_topic"
                android:textColor="@color/text_color"
                android:textSize="@dimen/item_semi_medium_text" />


            <ImageView
                android:id="@+id/img_item_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/action_add_favorite"
                android:src="@drawable/favorite_select"
                cardView:tint="@color/colorPrimary" />

            <ImageView
                android:id="@+id/img_item_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_arrow"
                android:tint="@color/colorPrimary"
                android:visibility="invisible"
                tools:ignore="UseAppTint" />
        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>
