<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/banner_ads"
        android:layout_marginBottom="@dimen/_3sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/relative_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/banner_height" />

                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_pager"
                    android:layout_marginTop="-30dp"
                    app:ci_animator="@animator/animator"
                    app:ci_drawable="@drawable/white_radius"
                    app:ci_drawable_unselected="@drawable/white_radius"
                    app:ci_height="8dp"
                    app:ci_margin="2dp"
                    app:ci_width="8dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_below="@+id/relative_banner"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp">

                <View
                    android:layout_width="@dimen/_2sdp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/txt_category_section"
                    style="@style/StyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toStartOf="@id/btn_more_category"
                    android:gravity="center_vertical|start"
                    android:text="@string/category_text"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/item_medium_text" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_more_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/more_bg"
                    android:minWidth="0dp"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="3dp"
                    android:text="@string/more"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/item_medium_text" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_category"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp" />

            <RelativeLayout
                android:id="@+id/layout_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_below="@+id/category_recycler"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <View
                    android:layout_width="@dimen/_2sdp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/txt_recent_section"
                    style="@style/StyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toStartOf="@id/btn_more_recent"
                    android:gravity="center_vertical|start"
                    android:text="@string/recent_text"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/item_medium_text" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_more_recent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/more_bg"
                    android:minWidth="0dp"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="3dp"
                    android:text="@string/more"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/item_medium_text" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recent_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_recent"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/txt_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_item"
        android:textColor="@color/text_color"
        android:textSize="@dimen/item_semi_medium_text"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/banner_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:orientation="vertical" />
</RelativeLayout>
